# gd-to-opt

./: .gitignore  make_test_stl.py  pyproject.toml  requirements-lock.txt
Interactive_Pages/: density_filter_interactive.html  overhang_filter_interactive.html  pareto_front_live_demo.html
configs/: default.yaml
frontend/: index.html
src/gdto/: bc_projection.py  filters.py  gd_loop.py  mesh_material.py  objectives.py  reconstruct.py  server.py  simp.py  stress_constraint.py  verify.py
src/gdto.egg-info/: SOURCES.txt  requires.txt
tests/: test_bc_projection.py  test_filters.py  test_gd_loop.py  test_mesh_material.py  test_simp.py  test_stress_constraint.py  test_verify.py
