[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdto"
version = "0.1.0"
description = "GD outer loop + TO inner loop for AM part optimisation"
requires-python = ">=3.10"
dependencies = [
    # FE assembly — inner loop workhorse
    "scikit-fem[all]>=11.0.0",

    # Numerics
    "numpy>=1.26",
    "scipy>=1.12",

    # Multi-objective GD (chunk 5)
    "pymoo>=0.6",

    # Config files
    "pyyaml>=6.0",

    # Geometry reconstruction (chunk 4)
    "scikit-image>=0.22",    # marching cubes
    "meshio>=5.3",           # STL export
]

[project.optional-dependencies]
ml = [
    # ML surrogate (chunk 8) — install separately, heavier
    "torch>=2.2",
    "gpytorch>=1.11",
    "botorch>=0.10",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",       # linter + formatter
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88